--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.8",
     "react-use": "^17.6.0",
+    "react-verification-input": "^4.2.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
