--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-separator": "^1.1.3",
@@ -22,6 +22,7 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "convex": "^1.23.0",
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
